Nueva descripcion y cambie la duracion de las animaciones

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="github" href="">GitHub</a>
             <a class="twitter" href="">Twitter</a>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, perspiciatis.</p>
+        <p>Proyectos pequeños para aprender y probar cosas nuevas con JS y HTML</p>
     </main>
 </body>
 </html>
