Pase el h1 que se generaba en el js a el html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <main>
-        <div id="app"></div>
+        <h1>HTML - TESTING</h1>
         <div class="social-media ">
             <a class="github" href="">GitHub</a>
             <a class="twitter" href="">Twitter</a>
         </div>
         <p>Proyectos pequeños para aprender y probar cosas nuevas con JS y HTML</p>
+        <div id="app"></div>
     </main>
 </body>
 </html>
