Div movido por el mouse

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         </div>
         <p>Proyectos pequeños para aprender y probar cosas nuevas con JS y HTML</p>
         <div id="app"></div>
+        <section id="move">
+            <div class="square"></div>
+        </section>
     </main>
 </body>
 </html>
