Enlaces de las redes sociales

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,13 @@
     <link rel="stylesheet" href="./styles.css">
     <script defer src="./index.js"></script>
 </head>
+
 <body>
     <main>
         <h1>HTML - TESTING</h1>
         <div class="social-media ">
-            <a class="github" href="">GitHub</a>
-            <a class="twitter" href="">Twitter</a>
+            <a class="github" href="https://github.com/geaglts" target="__blank">GitHub</a>
+            <a class="twitter" href="https://twitter.com/Geaglts" target="__blank">Twitter</a>
         </div>
         <p>Proyectos pequeños para aprender y probar cosas nuevas con JS y HTML</p>
         <div id="app"></div>
@@ -22,4 +24,5 @@
         </section>
     </main>
 </body>
+
 </html>
