Estructura html para el scroll click terminado

--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
         <section id="move">
             <div class="square"></div>
         </section>
+        <section class="scroll-click">
+            <ul class="list">
+                <li class="scroll-click__item">1</li>
+                <li class="scroll-click__item">2</li>
+                <li class="scroll-click__item">3</li>
+                <li class="scroll-click__item">4</li>
+                <li class="scroll-click__item">5</li>
+                <li class="scroll-click__item">6</li>
+            </ul>
+            <div class="scroll-click__buttons--container">
+                <button id="paca" class="button">Pa' ca</button>
+                <button id="paya" class="button">Pa' ya</button>
+            </div>
+        </section>
     </main>
 </body>
 
