Scroll con botones

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="square"></div>
         </section>
         <section class="scroll-click">
-            <ul class="list">
+            <ul class="list" id="scrollClickList">
                 <li class="scroll-click__item">1</li>
                 <li class="scroll-click__item">2</li>
                 <li class="scroll-click__item">3</li>
